--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <meta name="description" content="Excelência em limpeza e portaria para empresas que valorizam qualidade e confiabilidade. Serviços profissionais de limpeza, controle de acesso, recepção e gestão de pessoal em São Paulo." />
     <meta name="keywords" content="limpeza empresarial, portaria, controle de acesso, recepção, terceirização, CLT, serviços empresariais, São Paulo" />
     <meta name="author" content="Phoenix Serviços Empresariais" />
-    <link rel="canonical" href="/" />
+    <link rel="canonical" href="src/assets/phoenix-logo.png" />
 
     <meta property="og:title" content="Phoenix Serviços Empresariais - Limpeza e Portaria" />
     <meta property="og:description" content="Excelência em limpeza e portaria para empresas que valorizam qualidade e confiabilidade em São Paulo." />
