--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Phoenix Serviços Empresariais - Limpeza e Portaria" />
     <meta property="og:description" content="Excelência em limpeza e portaria para empresas que valorizam qualidade e confiabilidade em São Paulo." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="/" />
+    <meta property="og:url" content="src/assets/phoenix-logo.png" />
     <meta property="og:locale" content="pt_BR" />
 
     <meta name="twitter:card" content="summary_large_image" />
