--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="Excelência em limpeza e portaria para empresas que valorizam qualidade e confiabilidade. Serviços profissionais de limpeza, controle de acesso, recepção e gestão de pessoal em São Paulo." />
     <meta name="keywords" content="limpeza empresarial, portaria, controle de acesso, recepção, terceirização, CLT, serviços empresariais, São Paulo" />
     <meta name="author" content="Phoenix Serviços Empresariais" />
-    <link rel="canonical" href="src/assets/phoenix-logo.png" />
+    <link rel="canonical" href="/" />
 
     <meta property="og:title" content="Phoenix Serviços Empresariais - Limpeza e Portaria" />
     <meta property="og:description" content="Excelência em limpeza e portaria para empresas que valorizam qualidade e confiabilidade em São Paulo." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="src/assets/phoenix-logo.png" />
+    <meta property="og:url" content="/" />
     <meta property="og:locale" content="pt_BR" />
 
     <meta name="twitter:card" content="summary_large_image" />
