--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phoenix Serviços Empresariais - Limpeza e Portaria em São Paulo</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="public/favicon-32x32.png" />
     <meta name="description" content="Excelência em limpeza e portaria para empresas que valorizam qualidade e confiabilidade. Serviços profissionais de limpeza, controle de acesso, recepção e gestão de pessoal em São Paulo." />
     <meta name="keywords" content="limpeza empresarial, portaria, controle de acesso, recepção, terceirização, CLT, serviços empresariais, São Paulo" />
     <meta name="author" content="Phoenix Serviços Empresariais" />
